--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^11.1.7",
     "next": "14.2.2",
     "postcss": "8.4.38",
+    "prisma": "^5.14.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.4.3"
