--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.15.0",
     "autoprefixer": "10.4.19",
+    "bootstrap": "^5.3.3",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.2",
     "framer-motion": "^11.1.7",
-    "next": "14.2.2",
+    "next": "^14.2.4",
     "postcss": "8.4.38",
     "prisma": "^5.14.0",
     "react": "18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "18.2.0",
     "tailwindcss": "3.4.3"
   }
