--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "prisma": "^5.14.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.2.1",
+    "react-scroll": "^1.9.0",
     "tailwindcss": "3.4.3"
   }
 }
