--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/themes": "^3.1.1",
     "autoprefixer": "10.4.19",
+    "axios": "^1.7.3",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.2",
     "framer-motion": "^11.1.7",
@@ -18,6 +20,7 @@
     "prisma": "^5.14.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
     "react-scroll": "^1.9.0",
     "tailwindcss": "3.4.3"
