--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.3",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.2",
+    "firebase": "^10.12.5",
     "framer-motion": "^11.1.7",
     "next": "14.2.2",
     "postcss": "8.4.38",
