--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-form": "^0.1.0",
     "@radix-ui/themes": "^3.1.1",
     "autoprefixer": "10.4.19",
     "axios": "^1.7.3",
