--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^10.12.5",
     "framer-motion": "^11.1.7",
     "next": "14.2.2",
+    "next-auth": "^4.24.7",
     "postcss": "8.4.38",
     "prisma": "^5.14.0",
     "react": "18.2.0",
