--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "14.2.2",
     "firebase": "^10.12.5",
     "framer-motion": "^11.1.7",
+    "js-cookie": "^3.0.5",
     "next": "14.2.2",
     "next-auth": "^4.24.7",
     "postcss": "8.4.38",
