--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "js-cookie": "^3.0.5",
     "next": "14.2.2",
     "next-auth": "^4.24.7",
+    "nookies": "^2.5.2",
     "postcss": "8.4.38",
     "prisma": "^5.14.0",
     "react": "18.2.0",
