--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
     "react-scroll": "^1.9.0",
+    "sharp": "^0.33.5",
     "tailwindcss": "3.4.3"
   }
 }
